feat: adding appwrite and base auth logic

--- a/src/shared/i18n/en.json
+++ b/src/shared/i18n/en.json
@@ -13,6 +13,8 @@
         "emailInvalid": "Invalid email",
         "passwordRequired": "Password is required",
         "passwordMin": "Minimum 6 characters"
+        ,
+        "signupButton": "Create account"
     },
     "products": {
         "title": "Products",
